--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+     (function(){
+     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+     s1.async=true;
+     s1.src='https://embed.tawk.to/65bdcea90ff6374032c8e005/1hlmmui43';
+     s1.charset='UTF-8';
+     s1.setAttribute('crossorigin','*');
+     s0.parentNode.insertBefore(s1,s0);
+     })();
+     </script>
+     <!--End of Tawk.to Script-->
+
 <title>Kobidesigns - Best Printing Company in Nigeria </title>
 
 <link rel="icon" type="image/x-icon" href="assets/img/logo/favicon.png">
@@ -24,7 +38,7 @@
 <link rel="stylesheet" href="assets/css/nice-select.css">
 <link rel="stylesheet" href="assets/css/fontAwesome5Pro.css">
 <link rel="stylesheet" href="assets/css/hover-reveal.css">
-<link rel="stylesheet" href="assets/css/default.css">
+
 <link rel="stylesheet" href="assets/css/main.css">
 
 
@@ -574,7 +588,7 @@ View All Products
 <h6>Request A Quote</h6>
 <h2>If You Have Any Questions Contact With Us</h2>
 </div>
-<form action="#">
+<form action="https://forms.gle/EBPgNpNJnQKaFqzW8">
 <div class="row">
 <div class="col-md-6">
 <div class="form-group">
@@ -626,7 +640,7 @@ We adhere to a production process that's efficient, and environmentally mindfull
 <ul class="footer-contact">
 <li><a href="tel:+234806546959"><i class="far fa-phone"></i>+234806546959</a></li>
 <li><i class="far fa-map-marker-alt"></i>Somolu, Lagos Nigeria.</li>
-<li><a href="info@kobidesign.com"><i class="far fa-envelope"></i><span class="__cf_email__" data-cfemail="info@kobidesign.com">[email&#160;protected]</span></a></li>
+<li><a href="info@kobidesigns.com"><i class="far fa-envelope"></i><span class="__cf_email__" data-cfemail="info@kobidesigns.com">[email&#160;protected]</span></a></li>
 </ul>
 </div>
 </div>
@@ -680,7 +694,7 @@ We adhere to a production process that's efficient, and environmentally mindfull
 <div class="row">
 <div class="col-md-6 align-self-center">
 <p class="copyright-text">
-&copy; Copyright <span id="date"></span> <a href="#"> Kobidesigns </a> All Rights Reserved.
+&copy; Copyright <span id="date"></span> <a href="kobidesigns.com"> Kobidesigns </a> All Rights Reserved.
 </p>
 </div>
 <div class="col-md-6 align-self-center">
