--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,20 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/65bdcea90ff6374032c8e005/1hlmmui43';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 <title>Kobidesigns - Best Printing Company in Nigeria </title>
 
 <link rel="icon" type="image/x-icon" href="assets/img/logo/favicon.png">
@@ -260,7 +274,7 @@ Message <i class="far fa-paper-plane"></i></button>
 </div>
 <div class="contact-info-content">
 <h5>Email Us</h5>
-<p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="info@kobidesign.com">info@kobidesign.com</a></p>
+<p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="info@kobidesigns.com">info@kobidesigns.com</a></p>
 </div>
 </div>
 <div class="contact-info">
@@ -294,12 +308,12 @@ Message <i class="far fa-paper-plane"></i></button>
 <img src="assets/img/logo/logo-light.png" alt="">
 </a>
 <p class="mb-3">
-We adhere to a produvtion process that's efficient, and environmentally mindfull.
+We adhere to a production process that's efficient, and environmentally mindfull.
 </p>
 <ul class="footer-contact">
 <li><a href="tel:+234806546959"><i class="far fa-phone"></i>+234806546959</a></li>
 <li><i class="far fa-map-marker-alt"></i>Somolu, Lagos Nigeria.</li>
-<li><a href="info@kobidesign.com"><i class="far fa-envelope"></i><span class="__cf_email__" data-cfemail="info@kobidesign.com">[email&#160;protected]</span></a></li>
+<li><a href="info@kobidesigns.com"><i class="far fa-envelope"></i><span class="__cf_email__" data-cfemail="info@kobidesigns.com">[email&#160;protected]</span></a></li>
 </ul>
 </div>
 </div>
@@ -353,7 +367,7 @@ We adhere to a produvtion process that's efficient, and environmentally mindfull
 <div class="row">
 <div class="col-md-6 align-self-center">
 <p class="copyright-text">
-&copy; Copyright <span id="date"></span> <a href="#"> Kobidesigns </a> All Rights Reserved.
+&copy; Copyright <span id="date"></span> <a href="kobidesigns.com"> Kobidesigns </a> All Rights Reserved.
 </p>
 </div>
 <div class="col-md-6 align-self-center">
