--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </div>
 <div class="header-top-social">
 <a href="#"><i class="fab fa-facebook-f"></i></a>
-<a href="#"><i class="fab fa-twitter"></i></a>
+<a href="https://x.com/KobiDesigns?t=djLI7QSnphSYYZtqjPcyEQ&s=08"><i class="fab fa-twitter"></i></a>
 <a href="#"><i class="fab fa-linkedin-in"></i></a>
 <a href="#"><i class="fab fa-youtube"></i></a>
 </div>
@@ -146,27 +146,23 @@
 </ul>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Projects</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="#">Projects</a></li>
-<li><a class="dropdown-item" href="#">Project Single</a></li>
+     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 </ul>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Blog</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="#">Blog</a></li>
-<li><a class="dropdown-item" href="#">Blog Single</a></li>
+
+<li><a class="dropdown-item" href="#"></a></li>
 </ul>
 </li>
-<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+
+<li class="nav-item"><a class="nav-link" href="contact.html">Project</a></li>
+
 </ul>
 <div class="header-nav-right">
 <div class="header-nav-search">
 <a href="#" class="header-nav-link search-box-outer"><i class="far fa-search"></i></a>
 </div>
 <div class="header-btn">
-<a href="#" class="theme-btn">Get Quote <i class="far fa-arrow-right"></i></a>
+<a href="contact.html" class="theme-btn">Get Quote <i class="far fa-arrow-right"></i></a>
 </div>
 </div>
 </div>
@@ -690,7 +686,7 @@ We adhere to a production process that's efficient, and environmentally mindfull
 <div class="col-md-6 align-self-center">
 <ul class="footer-social">
 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+<li><a href="https://x.com/KobiDesigns?t=djLI7QSnphSYYZtqjPcyEQ&s=08"><i class="fab fa-twitter"></i></a></li>
 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 </ul>
