--- a/404.html
+++ b/404.html
@@ -8,9 +8,29 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 
-<title>Pinex - Printing Services Company HTML5 Template</title>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+     (function(){
+     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+     s1.async=true;
+     s1.src='https://embed.tawk.to/65bdcea90ff6374032c8e005/1hlmmui43';
+     s1.charset='UTF-8';
+     s1.setAttribute('crossorigin','*');
+     s0.parentNode.insertBefore(s1,s0);
+     })();
+     </script>
+     <!--End of Tawk.to Script-->
+
+<title>Kobidesigns - Best Printing Company in Nigeria </title>
 
 <link rel="icon" type="image/x-icon" href="assets/img/logo/favicon.png">
+
+<!-- CSS here -->
+
+
+<link rel="stylesheet" href="assets/css/main.css">
+
 
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/all-fontawesome.min.css">
@@ -26,7 +46,7 @@
 </div>
 
 
-<header class="header">
+<header class="home-3 header">
 
 <div class="header-top">
 <div class="container">
@@ -34,8 +54,7 @@
 <div class="header-top-left">
 <div class="header-top-contact">
 <ul>
-<li><a href="/cdn-cgi/l/email-protection#f990979f96b99c81989489959cd79a9694"><i class="far fa-envelope-open"></i><span class="__cf_email__" data-cfemail="2c45424a436c49544d415c4049024f4341">[email&#160;protected]</span></a></li>
-<li><a href="tel:+21236547898"><i class="far fa-headset"></i>+2 123 654 7898</a></li>
+
 </ul>
 </div>
 </div>
@@ -66,7 +85,7 @@
 </div>
 <div class="header-top-social">
 <a href="#"><i class="fab fa-facebook-f"></i></a>
-<a href="#"><i class="fab fa-twitter"></i></a>
+<a href="https://x.com/KobiDesigns?t=djLI7QSnphSYYZtqjPcyEQ&s=08"><i class="fab fa-twitter"></i></a>
 <a href="#"><i class="fab fa-linkedin-in"></i></a>
 <a href="#"><i class="fab fa-youtube"></i></a>
 </div>
@@ -91,11 +110,9 @@
 <div class="collapse navbar-collapse" id="main_nav">
 <ul class="navbar-nav">
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown">Home</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="index.html">Home Page 01</a></li>
-<li><a class="dropdown-item" href="index-2.html">Home Page 02</a></li>
-<li><a class="dropdown-item" href="index-3.html">Home Page 03</a></li>
+<a class="nav-link dropdown-toggle active" href="index.html" data-bs-toggle=>Home</a>
+<ul class="#">
+
 </ul>
 </li>
 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -104,23 +121,21 @@
 <ul class="dropdown-menu fade-up">
 <li><a class="dropdown-item" href="about.html">About Us</a></li>
 <li><a class="dropdown-item" href="team.html">Team Members</a></li>
-<li><a class="dropdown-item" href="pricing.html">Pricing Plan</a></li>
-<li><a class="dropdown-item" href="testimonial.html">Testimonials</a></li>
-<li><a class="dropdown-item" href="faq.html">Faq</a></li>
+<li><a class="dropdown-item" href="#">Pricing Plan</a></li>
+<li><a class="dropdown-item" href="#">Testimonials</a></li>
+<li><a class="dropdown-item" href="#">Faq</a></li>
 <li class="dropdown-submenu">
 <a class="dropdown-item dropdown-toggle" href="#">Account</a>
 <ul class="dropdown-menu">
-<li><a class="dropdown-item" href="login.html">Login</a></li>
-<li><a class="dropdown-item" href="register.html">Register</a></li>
-<li><a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
+<li><a class="dropdown-item" href="#">Login</a></li>
+<li><a class="dropdown-item" href="#">Register</a></li>
+<li><a class="dropdown-item" href="#">Forgot Password</a>
 </li>
 </ul>
 </li>
 <li><a class="dropdown-item" href="contact.html">Contact Us</a></li>
-<li><a class="dropdown-item" href="404.html">404 Error</a></li>
-<li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
-<li><a class="dropdown-item" href="terms.html">Terms Of Service</a></li>
-<li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
+<li><a class="dropdown-item" href="#">Terms Of Service</a></li>
+<li><a class="dropdown-item" href="#">Privacy Policy</a></li>
 </ul>
 </li>
 <li class="nav-item dropdown">
@@ -131,27 +146,23 @@
 </ul>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Projects</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="project.html">Projects</a></li>
-<li><a class="dropdown-item" href="project-single.html">Project Single</a></li>
+     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 </ul>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Blog</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="blog.html">Blog</a></li>
-<li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
+
+<li><a class="dropdown-item" href="#"></a></li>
 </ul>
 </li>
-<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+
+<li class="nav-item"><a class="nav-link" href="contact.html">Project</a></li>
+
 </ul>
 <div class="header-nav-right">
 <div class="header-nav-search">
 <a href="#" class="header-nav-link search-box-outer"><i class="far fa-search"></i></a>
 </div>
 <div class="header-btn">
-<a href="#" class="theme-btn">Get Quote <i class="far fa-arrow-right"></i></a>
+<a href="contact.html" class="theme-btn">Get Quote <i class="far fa-arrow-right"></i></a>
 </div>
 </div>
 </div>
@@ -209,13 +220,12 @@
 <img src="assets/img/logo/logo-light.png" alt="">
 </a>
 <p class="mb-3">
-We are many variations of passages available but the majority have suffered alteration
-in some form by injected humour words believable.
+We adhere to a production process that's efficient, and environmentally mindfull.
 </p>
 <ul class="footer-contact">
-<li><a href="tel:+21236547898"><i class="far fa-phone"></i>+2 123 654 7898</a></li>
-<li><i class="far fa-map-marker-alt"></i>25/B Milford Road, New York</li>
-<li><a href="/cdn-cgi/l/email-protection#cba2a5ada48baeb3aaa6bba7aee5a8a4a6"><i class="far fa-envelope"></i><span class="__cf_email__" data-cfemail="056c6b636a45607d64687569602b666a68">[email&#160;protected]</span></a></li>
+<li><a href="tel:+234806546959"><i class="far fa-phone"></i>+234806546959</a></li>
+<li><i class="far fa-map-marker-alt"></i>Somolu, Lagos Nigeria.</li>
+<li><a href="info@kobidesigns.com"><i class="far fa-envelope"></i><span class="__cf_email__" data-cfemail="info@kobidesigns.com">[email&#160;protected]</span></a></li>
 </ul>
 </div>
 </div>
@@ -223,12 +233,12 @@ in some form by injected humour words believable.
 <div class="footer-widget-box list">
 <h4 class="footer-widget-title">Quick Links</h4>
 <ul class="footer-list">
-<li><a href="#"><i class="fas fa-caret-right"></i> About Us</a></li>
+<li><a href="about.html"><i class="fas fa-caret-right"></i> About Us</a></li>
 <li><a href="#"><i class="fas fa-caret-right"></i> FAQ's</a></li>
 <li><a href="#"><i class="fas fa-caret-right"></i> Terms Of Service</a></li>
 <li><a href="#"><i class="fas fa-caret-right"></i> Privacy policy</a></li>
 <li><a href="#"><i class="fas fa-caret-right"></i> Our Services</a></li>
-<li><a href="#"><i class="fas fa-caret-right"></i> Latest Blog</a></li>
+
 </ul>
 </div>
 </div>
@@ -269,13 +279,13 @@ in some form by injected humour words believable.
 <div class="row">
 <div class="col-md-6 align-self-center">
 <p class="copyright-text">
-&copy; Copyright <span id="date"></span> <a href="#"> Pinex </a> All Rights Reserved.
+&copy; Copyright <span id="date"></span> <a href="kobidesigns.com"> Kobidesigns </a> All Rights Reserved.
 </p>
 </div>
 <div class="col-md-6 align-self-center">
 <ul class="footer-social">
 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+<li><a href="https://x.com/KobiDesigns?t=djLI7QSnphSYYZtqjPcyEQ&s=08"><i class="fab fa-twitter"></i></a></li>
 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 </ul>
@@ -301,6 +311,28 @@ in some form by injected humour words believable.
 <script src="assets/js/counter-up.js"></script>
 <script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/main.js"></script>
+
+<script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
+<script src="assets/js/vendor/waypoints.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/meanmenu.js"></script>
+<script src="assets/js/swiper-bundle.min.js"></script>
+<script src="assets/js/magnific-popup.min.js"></script>
+<script src="assets/js/parallax.min.js"></script>
+<script src="assets/js/backToTop.js"></script>
+<script src="assets/js/jquery-ui-slider-range.js"></script>
+<script src="assets/js/nice-select.min.js"></script>
+<script src="assets/js/counterup.min.js"></script>
+<script src="assets/js/ajax-form.js"></script>
+<script src="assets/js/wow.min.js"></script>
+<script src="assets/js/beforeafter.jquery-1.0.0.js"></script>
+<script src="assets/js/isotope.pkgd.min.js"></script>
+<script src="assets/js/imagesloaded.pkgd.min.js"></script>
+<script src="assets/js/jquery.ez-plus.js"></script>
+<script src="assets/js/tilt.jquery.min.js"></script>
+<script src="assets/js/hover-reveal.js"></script>
+<script src="assets/js/tween-max.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
