--- a/contact.html
+++ b/contact.html
@@ -10,35 +10,25 @@
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/65bdcea90ff6374032c8e005/1hlmmui43';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
+     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+     (function(){
+     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+     s1.async=true;
+     s1.src='https://embed.tawk.to/65bdcea90ff6374032c8e005/1hlmmui43';
+     s1.charset='UTF-8';
+     s1.setAttribute('crossorigin','*');
+     s0.parentNode.insertBefore(s1,s0);
+     })();
+     </script>
+     <!--End of Tawk.to Script-->
 
 <title>Kobidesigns - Best Printing Company in Nigeria </title>
 
 <link rel="icon" type="image/x-icon" href="assets/img/logo/favicon.png">
 
 <!-- CSS here -->
-<link rel="stylesheet" href="assets/css/preloader.css">
-<link rel="stylesheet" href="assets/css/bootstrap.css">
-<link rel="stylesheet" href="assets/css/meanmenu.css">
-<link rel="stylesheet" href="assets/css/animate.min.css">
-<link rel="stylesheet" href="assets/css/swiper-bundle.css">
-<link rel="stylesheet" href="assets/css/backToTop.css">
-<link rel="stylesheet" href="assets/css/magnific-popup.css">
-<link rel="stylesheet" href="assets/css/ui-range-slider.css">
-<link rel="stylesheet" href="assets/css/nice-select.css">
-<link rel="stylesheet" href="assets/css/fontAwesome5Pro.css">
-<link rel="stylesheet" href="assets/css/hover-reveal.css">
-<link rel="stylesheet" href="assets/css/default.css">
+
+
 <link rel="stylesheet" href="assets/css/main.css">
 
 
@@ -95,7 +85,7 @@
 </div>
 <div class="header-top-social">
 <a href="#"><i class="fab fa-facebook-f"></i></a>
-<a href="#"><i class="fab fa-twitter"></i></a>
+<a href="https://x.com/KobiDesigns?t=djLI7QSnphSYYZtqjPcyEQ&s=08"><i class="fab fa-twitter"></i></a>
 <a href="#"><i class="fab fa-linkedin-in"></i></a>
 <a href="#"><i class="fab fa-youtube"></i></a>
 </div>
@@ -156,27 +146,23 @@
 </ul>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Projects</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="#">Projects</a></li>
-<li><a class="dropdown-item" href="#">Project Single</a></li>
+     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 </ul>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Blog</a>
-<ul class="dropdown-menu fade-up">
-<li><a class="dropdown-item" href="#">Blog</a></li>
-<li><a class="dropdown-item" href="#">Blog Single</a></li>
+
+<li><a class="dropdown-item" href="#"></a></li>
 </ul>
 </li>
-<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+
+<li class="nav-item"><a class="nav-link" href="contact.html">Project</a></li>
+
 </ul>
 <div class="header-nav-right">
 <div class="header-nav-search">
 <a href="#" class="header-nav-link search-box-outer"><i class="far fa-search"></i></a>
 </div>
 <div class="header-btn">
-<a href="#" class="theme-btn">Get Quote <i class="far fa-arrow-right"></i></a>
+<a href="contact.html" class="theme-btn">Get Quote <i class="far fa-arrow-right"></i></a>
 </div>
 </div>
 </div>
@@ -373,7 +359,7 @@ We adhere to a production process that's efficient, and environmentally mindfull
 <div class="col-md-6 align-self-center">
 <ul class="footer-social">
 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+<li><a href="https://x.com/KobiDesigns?t=djLI7QSnphSYYZtqjPcyEQ&s=08"><i class="fab fa-twitter"></i></a></li>
 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 </ul>
