--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Kobidesigns, a solutions-driven graphic communications company with a history of
 <div class="row">
 <div class="col-lg-5 mx-auto">
 <div class="site-heading text-center">
-<span class="site-title-tagline">PRODUCTS</span>
+<span class="site-title-tagline">Products</span>
 <h2 class="site-title">HOT DEALS</h2>
 <span class="shadow-title">Products</span>
 </div>
