--- a/shop.html
+++ b/shop.html
@@ -212,7 +212,7 @@ Best selling product START -->
  <div class="container">
      <!-- Title -->
      <div class="d-sm-flex justify-content-between align-items-center mb-4">
-         <h2 class="m-0">Our best selling Products &#128142;</h2>
+         <h2 class="m-0">Best Selling Products &#128142;</h2>
      </div>
 
      <!-- Product START -->
@@ -248,7 +248,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
 
                      
                  </div>
@@ -283,7 +283,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -345,7 +345,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -378,7 +378,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                     <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -409,7 +409,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -440,7 +440,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -471,7 +471,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -506,7 +506,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -539,7 +539,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                     <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -570,7 +570,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -601,7 +601,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -634,7 +634,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                     <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -666,7 +666,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -698,7 +698,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -729,7 +729,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -763,7 +763,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -796,7 +796,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -827,7 +827,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -858,7 +858,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -891,7 +891,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -922,7 +922,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -951,7 +951,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                     <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -982,7 +982,7 @@ Best selling product START -->
                  <!-- Card footer -->
                  <div class="card-footer text-center p-0">
                      <!-- Button -->
-                    <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                    <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                  </div>
              </div>
          </div>
@@ -1013,7 +1013,7 @@ Best selling product START -->
                 <!-- Card footer -->
                 <div class="card-footer text-center p-0">
                    <!-- Button -->
-                   <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                   <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                 </div>
             </div>
         </div>
@@ -1045,7 +1045,7 @@ Best selling product START -->
                 <!-- Card footer -->
                 <div class="card-footer text-center p-0">
                    <!-- Button -->
-                   <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+                   <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
                 </div>
             </div>
         </div>
@@ -1077,7 +1077,7 @@ Best selling product START -->
         <!-- Card footer -->
         <div class="card-footer text-center p-0">
            <!-- Button -->
-           <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+           <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
         </div>
     </div>
 </div>
@@ -1109,7 +1109,7 @@ Best selling product START -->
         <!-- Card footer -->
         <div class="card-footer text-center p-0">
            <!-- Button -->
-           <a href="#" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
+           <a href="https://wa.me/message/RLJV2HG33WH6H1" class="btn py-2 my-3 fw-bold btn-primary mb-0" data-bs-toggle="modal" data-bs-target="#conOrderNow">Order Now</a> 
         </div>
     </div>
 </div>
