--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+     <link href = "fonts/BauhausStd/stylesheet.css" rel = "stylesheet" type = "text/css" />
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap')
+</style>  
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
